# Shokti_chat_backend

./: .gitignore  README.md  main.py  main1.py  pyproject.toml  rag_pipline.py
data/: user_001.json
data/vector_index/user_001_faiss/: index.faiss  index.pkl
notebooks/: adding.ipynb
