[project]
name = "shokti-chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.3",
    "groq>=0.33.0",
    "jq>=1.10.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.12.3",
    "sentence-transformers>=5.1.2",
    "supabase>=2.22.4",
    "uvicorn>=0.38.0",
    "chronos-forecasting>=1.5.3",
    "holidays>=0.82",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
]
